[gd_scene load_steps=14 format=3 uid="uid://c6o5rrol420pb"]

[ext_resource type="Script" path="res://scenes/intro_scene/dice_selection/dice_selection.gd" id="1_k4do7"]
[ext_resource type="Texture2D" uid="uid://bsakk43lu6exs" path="res://assets/panels/button_panel/button_panel_1600x300.png" id="2_rdcre"]
[ext_resource type="LabelSettings" uid="uid://bnintpa14r1ev" path="res://assets/fonts/orbitron_32_so.tres" id="3_7frn5"]
[ext_resource type="Texture2D" uid="uid://bbobfn5s0a72r" path="res://assets/panels/next_button/next_button_150x80.png" id="4_ekthd"]
[ext_resource type="Texture2D" uid="uid://c66d4tjw6s8rc" path="res://assets/panels/next_button/next_button_150x80_pressed.png" id="5_s8gl5"]
[ext_resource type="Texture2D" uid="uid://c5bayin3o83gi" path="res://assets/panels/next_button/next_button_150x80_hover.png" id="6_87ksd"]
[ext_resource type="Texture2D" uid="uid://b4aolxgpa6u4v" path="res://assets/dice/d6/tech/tech135.png" id="7_twwud"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="7_xpdq4"]
[ext_resource type="Texture2D" uid="uid://cc3q6t8hqvgqq" path="res://assets/dice/d6/magic/magic135.png" id="8_043ra"]
[ext_resource type="Texture2D" uid="uid://b7scmujb5ke56" path="res://assets/dice/d6/bio/bio135.png" id="9_6awg0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1qryt"]
shader = ExtResource("7_xpdq4")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_width = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yf8ug"]
shader = ExtResource("7_xpdq4")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_width = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4mhy3"]
shader = ExtResource("7_xpdq4")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_width = 2.0

[node name="DiceSelection" type="Node2D"]
script = ExtResource("1_k4do7")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Background"]
custom_minimum_size = Vector2(1600, 300)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -300.0
offset_right = 800.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_rdcre")

[node name="MarginContainer" type="MarginContainer" parent="Background/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DialogueText" type="Label" parent="Background/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(1400, 250)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Choose your Dice!"
label_settings = ExtResource("3_7frn5")
autowrap_mode = 2

[node name="TextureButton" type="TextureButton" parent="Background/TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
action_mode = 0
texture_normal = ExtResource("4_ekthd")
texture_pressed = ExtResource("5_s8gl5")
texture_hover = ExtResource("6_87ksd")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 140
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="TechDice" type="TextureButton" parent="Background/MarginContainer"]
material = SubResource("ShaderMaterial_1qryt")
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("7_twwud")

[node name="MagicDice" type="TextureButton" parent="Background/MarginContainer"]
material = SubResource("ShaderMaterial_yf8ug")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource("8_043ra")

[node name="BioDice" type="TextureButton" parent="Background/MarginContainer"]
material = SubResource("ShaderMaterial_4mhy3")
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("9_6awg0")
